--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-modals": "^0.22.3",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
+    "react-native-svg": "^12.1.1",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0"
