--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.24.0",
     "react": "17.0.2",
     "react-native": "0.66.3",
+    "react-native-modal": "^13.0.0",
     "react-native-modals": "^0.22.3",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
